gccida/c0/subreg_lowpart_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_lowpart_p/src/emit-rtl.c:1764:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_lowpart_p/src/emit-rtl.c:1764:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_lowpart_p/src/emit-rtl.c:1765:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint)) == x[1]; 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_lowpart_p/src/emit-rtl.c:1765:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint)) == x[1]; 
                 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_lowpart_p/src/obj/emit-rtl.o] Error 1
